--- a/fills-calcuer/package.json
+++ b/fills-calcuer/package.json
@@ -3,18 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.13",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "intl": "^1.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-number-format": "^4.9.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.10",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +37,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
+    "@types/numeral": "^2.0.2",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21"
   }
 }
