--- a/fills-calcuer/package.json
+++ b/fills-calcuer/package.json
@@ -6,7 +6,9 @@
     "intl": "^1.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.10",
     "typescript": "^4.5.5",
