--- a/fills-calcuer/package.json
+++ b/fills-calcuer/package.json
@@ -47,6 +47,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.21"
+    "@types/styled-components": "^5.1.21",
+    "jest": "^27.5.1"
   }
 }
