--- a/fills-calcuer/package.json
+++ b/fills-calcuer/package.json
@@ -8,7 +8,6 @@
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.10",
@@ -49,6 +48,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "react-scripts": "5.0.0"
   }
 }
