--- a/next-flls/package.json
+++ b/next-flls/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch next-flls/__tests__/index.test.tsx"
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.1.6",
