--- a/next-flls/package.json
+++ b/next-flls/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "18.1.0",
     "sass": "^1.52.3",
-    "sweetalert2": "^11.4.17"
+    "sweetalert2": "^11.4.17",
+    "walletjs": "^1.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
