--- a/next-flls/package.json
+++ b/next-flls/package.json
@@ -15,7 +15,6 @@
     "react-currency-input-field": "^3.6.14",
     "react-dom": "18.2.0",
     "sass": "^1.70.0",
-    "sweetalert2": "^11.10.4",
     "walletjs": "^1.2.1"
   },
   "devDependencies": {
@@ -30,6 +29,7 @@
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react-toastify": "^10.0.5",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
   }
